Add base for predefine tests.

--- a/Symulator/Symulator/Symulator.csproj
+++ b/Symulator/Symulator/Symulator.csproj
@@ -58,6 +58,8 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="PredefinedTests\BasePredefineTest.cs" />
+    <Compile Include="PredefinedTests\OpenMovieDatabasePredefinedTest.cs" />
     <Compile Include="Request\BaseRequest.cs" />
     <Compile Include="Request\GetRequest.cs" />
     <Compile Include="Program.cs" />
