--- a/Symulator/Symulator/Symulator.csproj
+++ b/Symulator/Symulator/Symulator.csproj
@@ -51,28 +51,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConstantNames.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="Controls\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Controls\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainWindowViewModel.cs" />
-    <Compile Include="PredefinedTests\BasePredefineTest.cs" />
-    <Compile Include="PredefinedTests\GuardianPredefinedTest.cs" />
-    <Compile Include="PredefinedTests\OpenMovieDatabasePredefinedTest.cs" />
-    <Compile Include="PredefinedTests\PredefinedTest.cs" />
-    <Compile Include="PredefinedTests\UniversityPredefinedTest.cs" />
-    <Compile Include="PredefinedTests\WikipediaPredefinedTest.cs" />
+    <Compile Include="Controls\MainWindowViewModel.cs" />
+    <Compile Include="Controls\ParametersDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\ParametersDetails.Designer.cs">
+      <DependentUpon>ParametersDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Test.cs" />
     <Compile Include="Request\BaseRequest.cs" />
     <Compile Include="Request\GetRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request\IRequest.cs" />
     <Compile Include="Request\PostRequest.cs" />
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Controls\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ParametersDetails.resx">
+      <DependentUpon>ParametersDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -86,6 +90,7 @@
     <None Include="packages.config" />
     <None Include="Properties\DataSources\MainForm.datasource" />
     <None Include="Properties\DataSources\MainWindowViewModel.datasource" />
+    <None Include="Properties\DataSources\Symulator.Controls.ParametersDetails.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -104,9 +109,6 @@
       <Project>{f0a65c19-ba3d-4ce4-8df1-7e9338a8a570}</Project>
       <Name>Charts</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
