--- a/Symulator/Symulator/Symulator.csproj
+++ b/Symulator/Symulator/Symulator.csproj
@@ -64,12 +64,20 @@
     <Compile Include="Controls\ParametersDetails.Designer.cs">
       <DependentUpon>ParametersDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ParametersPostDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\ParametersPostDetails.Designer.cs">
+      <DependentUpon>ParametersPostDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Test.cs" />
     <Compile Include="Request\BaseRequest.cs" />
     <Compile Include="Request\GetRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\HeadRequest.cs" />
     <Compile Include="Request\IRequest.cs" />
+    <Compile Include="Request\PostJSONRequest.cs" />
     <Compile Include="Request\PostRequest.cs" />
     <EmbeddedResource Include="Controls\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -77,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\ParametersDetails.resx">
       <DependentUpon>ParametersDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ParametersPostDetails.resx">
+      <DependentUpon>ParametersPostDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -102,7 +113,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Charts\Charts.csproj">
